--- a/MyDailyPal/View/Base.lproj/Main.storyboard
+++ b/MyDailyPal/View/Base.lproj/Main.storyboard
@@ -2747,6 +2747,9 @@ tapping PIN.</string>
                                         <state key="normal" title="      Preferences" image="setting_icon">
                                             <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                         </state>
+                                        <connections>
+                                            <segue destination="s17-ju-7eC" kind="show" id="azi-0B-B9z"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="75M-o2-oiF">
                                         <rect key="frame" x="0.0" y="444" width="350" height="45"/>
@@ -2758,6 +2761,9 @@ tapping PIN.</string>
                                         <state key="normal" title="      My Side Effects" image="sideeffect_icon">
                                             <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                         </state>
+                                        <connections>
+                                            <segue destination="Bra-b9-nGD" kind="show" id="ZNx-gU-oax"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xgb-7B-CtW">
                                         <rect key="frame" x="0.0" y="394" width="350" height="45"/>
@@ -2769,6 +2775,9 @@ tapping PIN.</string>
                                         <state key="normal" title="      My Visits" image="list_icon">
                                             <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                         </state>
+                                        <connections>
+                                            <segue destination="NK7-bf-IlK" kind="show" id="kyn-aq-311"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="emq-dC-7tp">
                                         <rect key="frame" x="0.0" y="344" width="350" height="45"/>
@@ -2791,6 +2800,9 @@ tapping PIN.</string>
                                         <state key="normal" title="      My Treatment Plan" image="check_icon">
                                             <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                         </state>
+                                        <connections>
+                                            <segue destination="AXT-cV-4Ah" kind="show" id="vJj-aD-TmC"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YVu-6f-1b4">
                                         <rect key="frame" x="0.0" y="244" width="350" height="45"/>
@@ -2802,6 +2814,9 @@ tapping PIN.</string>
                                         <state key="normal" title="      My Tips and Information" image="book_icon">
                                             <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                         </state>
+                                        <connections>
+                                            <segue destination="iIa-4e-CJd" kind="show" id="d7v-9Z-alJ"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dEL-pt-R7f">
                                         <rect key="frame" x="0.0" y="194" width="350" height="45"/>
@@ -2813,6 +2828,9 @@ tapping PIN.</string>
                                         <state key="normal" title="      Home" image="home-icon">
                                             <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                         </state>
+                                        <connections>
+                                            <segue destination="AXT-cV-4Ah" kind="show" id="ASh-Vq-4le"/>
+                                        </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E3e-ec-7Ih">
                                         <rect key="frame" x="0.0" y="0.0" width="350" height="184"/>
@@ -3515,8 +3533,11 @@ tapping PIN.</string>
         <image name="timer" width="256" height="256"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="RG1-Dw-oWb"/>
-        <segue reference="a8O-ih-Zbb"/>
+        <segue reference="ZNx-gU-oax"/>
+        <segue reference="kyn-aq-311"/>
+        <segue reference="azi-0B-B9z"/>
+        <segue reference="d7v-9Z-alJ"/>
+        <segue reference="ASh-Vq-4le"/>
         <segue reference="j5J-h6-Oai"/>
         <segue reference="Uw7-eH-aiR"/>
         <segue reference="c2W-7J-82N"/>
